--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   
   <!-- Primary Meta Tags -->
   <!-- TODO: Replace with your paper title and author names -->
-  <meta name="title" content="PAPER_TITLE - AUTHOR_NAMES">
+  <meta name="title" content="Soft Robotic Sim2Real via Conditional Flow Matching">
   <!-- TODO: Write a compelling 150-160 character description of your research -->
-  <meta name="description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
+  <meta name="description" content="Modelling soft robots remains a significant challenge due to high computational costs and frequent mismatches with real-world behaviour; a phenomenon known as the Sim2Real gap. This paper addresses the Sim2Real gap through Conditional Flow Matching, which learns a mapping between the simulation domain and the real-world experimental domain. A neural network learns a conditional probability path that transforms simulated states into real-world observations, conditioned on control inputs, thereby minimising simulation inaccuracies. The method is demonstrated through benchmark Sim2Sim and Sim2Real tensile tests, and additionally demonstrated in the domain of soft gripping using Fin Ray grippers, \textcolor{orange}{for which we introduce a novel encoder architecture that learns a representation of the contact state, enabling the model to generalize to previously unseen interactions}. The model provides highly accurate prediction of force and deformation, successfully capturing complex elastic behaviours including hysteresis and force fluctuations. Experimental results validate that Conditional Flow Matching can bridge the Sim2Real gap for various soft robot morphologies, without requiring large datasets, and with strong generalisation capabilities. Notably, our findings indicate substantial generalization capabilities in Sim2Real scenarios.">
   <!-- TODO: Add 5-10 relevant keywords for your research area -->
-  <meta name="keywords" content="KEYWORD1, KEYWORD2, KEYWORD3, machine learning, computer vision, AI">
+  <meta name="keywords" content="Soft robotics, Sim-to-Real, Data-driven modelling, Manipulation, Conditional Flow Matching">
   <!-- TODO: List all authors -->
   <meta name="author" content="FIRST_AUTHOR_NAME, SECOND_AUTHOR_NAME">
   <meta name="robots" content="index, follow">
@@ -19,13 +19,13 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article">
   <!-- TODO: Replace with your institution or lab name -->
-  <meta property="og:site_name" content="INSTITUTION_OR_LAB_NAME">
+  <meta property="og:site_name" content="CSIRO Robotics, Brisbane, Australia.">
   <!-- TODO: Same as paper title above -->
-  <meta property="og:title" content="PAPER_TITLE">
+  <meta property="og:title" content="Soft Robotic Sim2Real via Conditional Flow Matching">
   <!-- TODO: Same as description above -->
-  <meta property="og:description" content="BRIEF_DESCRIPTION_OF_YOUR_RESEARCH_CONTRIBUTION_AND_FINDINGS">
+  <meta property="og:description" content="Modelling soft robots remains a significant challenge due to high computational costs and frequent mismatches with real-world behaviour; a phenomenon known as the Sim2Real gap. This paper addresses the Sim2Real gap through Conditional Flow Matching, which learns a mapping between the simulation domain and the real-world experimental domain. A neural network learns a conditional probability path that transforms simulated states into real-world observations, conditioned on control inputs, thereby minimising simulation inaccuracies. The method is demonstrated through benchmark Sim2Sim and Sim2Real tensile tests, and additionally demonstrated in the domain of soft gripping using Fin Ray grippers, for which we introduce a novel encoder architecture that learns a representation of the contact state, enabling the model to generalize to previously unseen interactions. The model provides highly accurate prediction of force and deformation, successfully capturing complex elastic behaviours including hysteresis and force fluctuations. Experimental results validate that Conditional Flow Matching can bridge the Sim2Real gap for various soft robot morphologies, without requiring large datasets, and with strong generalisation capabilities. Notably, our findings indicate substantial generalization capabilities in Sim2Real scenarios.">
   <!-- TODO: Replace with your actual website URL -->
-  <meta property="og:url" content="https://YOUR_DOMAIN.com/YOUR_PROJECT_PAGE">
+  <meta property="og:url" content="https://konvicted2438.github.io/CFM_sim2real_web/">
   <!-- TODO: Create a 1200x630px preview image and update path -->
   <meta property="og:image" content="https://YOUR_DOMAIN.com/static/images/social_preview.png">
   <meta property="og:image:width" content="1200">
